--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "pestphp/pest": "^2.35"
+        "pestphp/pest": "^2.35",
+        "pestphp/pest-plugin-faker": "^2.0"
     },
     "autoload": {
         "psr-4": {
