--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "juststeveking/http-status-code": "^3.0",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-query-builder": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
