--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -1,7 +1,7 @@
 name: Fix Code Style
- 
+
 on: [push]
- 
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -9,24 +9,27 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.3]
- 
+
+    permissions:  # Add permissions section
+      contents: write  # Give write access to commit the changes
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
- 
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           extensions: json, dom, curl, libxml, mbstring
           coverage: none
- 
+
       - name: Install Pint
         run: composer global require laravel/pint
- 
+
       - name: Run Pint
         run: pint
- 
+
       - name: Commit linted files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
