--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -1,6 +1,7 @@
 name: Fix Code Style
 
-on: [push]
+on:
+  workflow_call:
 
 jobs:
   lint:
@@ -10,8 +11,8 @@ jobs:
       matrix:
         php: [8.3]
 
-    permissions:  # Add permissions section
-      contents: write  # Give write access to commit the changes
+    permissions: # Add permissions section
+      contents: write # Give write access to commit the changes
 
     steps:
       - name: Checkout code
