--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "juststeveking/http-status-code": "^3.0",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "spatie/laravel-query-builder": "^6.0"
