--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,16 +60,72 @@
 #         networks:
 #             - atomic-backend-network
 
-#     queue:
-#         image: 34996980/atomic-backend-image:v1.0.0
-#         container_name: atomic-queue-container
+#     queue-worker:
+#         build:
+#             context: ./
+#             dockerfile: Dockerfile
+#         container_name: atomic-backend-queue-worker
 #         restart: unless-stopped
 #         working_dir: /var/www/
 #         command: php artisan queue:work
 #         depends_on:
+#             - db
 #             - atomic-backend-app
 #         volumes:
 #             - ./:/var/www
+#         environment:
+#             DB_CONNECTION: ${DB_CONNECTION}
+#             DB_HOST: atomic-backend-db-container
+#             DB_PORT: ${DB_PORT}
+#             DB_DATABASE: ${DB_DATABASE}
+#             DB_USERNAME: ${DB_USERNAME}
+#             DB_PASSWORD: ${DB_PASSWORD}
+#         networks:
+#             - atomic-backend-network
+
+#     reverb:
+#         build:
+#             context: ./
+#             dockerfile: Dockerfile
+#         container_name: atomic-backend-reverb
+#         restart: unless-stopped
+#         working_dir: /var/www/
+#         command: php artisan reverb:start --debug
+#         depends_on:
+#             - db
+#             - atomic-backend-app
+#         volumes:
+#             - ./:/var/www
+#         environment:
+#             DB_CONNECTION: ${DB_CONNECTION}
+#             DB_HOST: atomic-backend-db-container
+#             DB_PORT: ${DB_PORT}
+#             DB_DATABASE: ${DB_DATABASE}
+#             DB_USERNAME: ${DB_USERNAME}
+#             DB_PASSWORD: ${DB_PASSWORD}
+#         networks:
+#             - atomic-backend-network
+
+#     queue-listen:
+#         build:
+#             context: ./
+#             dockerfile: Dockerfile
+#         container_name: atomic-backend-queue-listen
+#         restart: unless-stopped
+#         working_dir: /var/www/
+#         command: php artisan queue:listen
+#         depends_on:
+#             - db
+#             - atomic-backend-app
+#         volumes:
+#             - ./:/var/www
+#         environment:
+#             DB_CONNECTION: ${DB_CONNECTION}
+#             DB_HOST: atomic-backend-db-container
+#             DB_PORT: ${DB_PORT}
+#             DB_DATABASE: ${DB_DATABASE}
+#             DB_USERNAME: ${DB_USERNAME}
+#             DB_PASSWORD: ${DB_PASSWORD}
 #         networks:
 #             - atomic-backend-network
 
@@ -165,10 +221,70 @@ services:
         networks:
             - atomic-backend-network
 
+    # reverb:
+    #     build:
+    #         context: ./
+    #         dockerfile: Dockerfile
+    #     container_name: atomic-backend-reverb
+    #     restart: unless-stopped
+    #     working_dir: /var/www/
+    #     command: php artisan reverb:start --debug
+    #     depends_on:
+    #         - db
+    #         - atomic-backend-app
+    #     volumes:
+    #         - ./:/var/www
+    #     ports:
+    #         - "8081:8080" # Expose WebSocket port
+    #     environment:
+    #         DB_CONNECTION: ${DB_CONNECTION}
+    #         DB_HOST: atomic-backend-db-container
+    #         DB_PORT: ${DB_PORT}
+    #         DB_DATABASE: ${DB_DATABASE}
+    #         DB_USERNAME: ${DB_USERNAME}
+    #         DB_PASSWORD: ${DB_PASSWORD}
+
+    #         REVERB_APP_ID: 460890
+    #         REVERB_APP_KEY: o3het0elk13bgxqsaw3d
+    #         REVERB_APP_SECRET: 5dp2bwzs2mtrd7pq1w2j
+    #         REVERB_HOST: "localhost"
+    #         REVERB_PORT: 8080
+    #         REVERB_SCHEME: http
+
+    #         VITE_REVERB_APP_KEY: "${REVERB_APP_KEY}"
+    #         VITE_REVERB_HOST: "${REVERB_HOST}"
+    #         VITE_REVERB_PORT: "${REVERB_PORT}"
+    #         VITE_REVERB_SCHEME: "${REVERB_SCHEME}"
+
+    #     networks:
+    #         - atomic-backend-network
+
+    # queue-listen:
+    #     build:
+    #         context: ./
+    #         dockerfile: Dockerfile
+    #     container_name: atomic-backend-queue-listen
+    #     restart: unless-stopped
+    #     working_dir: /var/www/
+    #     command: php artisan queue:listen
+    #     depends_on:
+    #         - db
+    #         - atomic-backend-app
+    #     volumes:
+    #         - ./:/var/www
+    #     environment:
+    #         DB_CONNECTION: ${DB_CONNECTION}
+    #         DB_HOST: atomic-backend-db-container
+    #         DB_PORT: ${DB_PORT}
+    #         DB_DATABASE: ${DB_DATABASE}
+    #         DB_USERNAME: ${DB_USERNAME}
+    #         DB_PASSWORD: ${DB_PASSWORD}
+    #     networks:
+    #         - atomic-backend-network
+
 networks:
     atomic-backend-network:
         driver: bridge
 
 volumes:
     db-data:
-
