--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,51 +83,66 @@
 #         networks:
 #             - atomic-backend-network
 
-#     reverb:
-#         build:
-#             context: ./
-#             dockerfile: Dockerfile
-#         container_name: atomic-backend-reverb
-#         restart: unless-stopped
-#         working_dir: /var/www/
-#         command: php artisan reverb:start --debug
-#         depends_on:
-#             - db
-#             - atomic-backend-app
-#         volumes:
-#             - ./:/var/www
-#         environment:
-#             DB_CONNECTION: ${DB_CONNECTION}
-#             DB_HOST: atomic-backend-db-container
-#             DB_PORT: ${DB_PORT}
-#             DB_DATABASE: ${DB_DATABASE}
-#             DB_USERNAME: ${DB_USERNAME}
-#             DB_PASSWORD: ${DB_PASSWORD}
-#         networks:
-#             - atomic-backend-network
+#     # reverb:
+#     #     build:
+#     #         context: ./
+#     #         dockerfile: Dockerfile
+#     #     container_name: atomic-backend-reverb
+#     #     restart: unless-stopped
+#     #     working_dir: /var/www/
+#     #     command: php artisan reverb:start --debug
+#     #     depends_on:
+#     #         - db
+#     #         - atomic-backend-app
+#     #     volumes:
+#     #         - ./:/var/www
+#     #     ports:
+#     #         - "8081:8080" # Expose WebSocket port
+#     #     environment:
+#     #         DB_CONNECTION: ${DB_CONNECTION}
+#     #         DB_HOST: atomic-backend-db-container
+#     #         DB_PORT: ${DB_PORT}
+#     #         DB_DATABASE: ${DB_DATABASE}
+#     #         DB_USERNAME: ${DB_USERNAME}
+#     #         DB_PASSWORD: ${DB_PASSWORD}
 
-#     queue-listen:
-#         build:
-#             context: ./
-#             dockerfile: Dockerfile
-#         container_name: atomic-backend-queue-listen
-#         restart: unless-stopped
-#         working_dir: /var/www/
-#         command: php artisan queue:listen
-#         depends_on:
-#             - db
-#             - atomic-backend-app
-#         volumes:
-#             - ./:/var/www
-#         environment:
-#             DB_CONNECTION: ${DB_CONNECTION}
-#             DB_HOST: atomic-backend-db-container
-#             DB_PORT: ${DB_PORT}
-#             DB_DATABASE: ${DB_DATABASE}
-#             DB_USERNAME: ${DB_USERNAME}
-#             DB_PASSWORD: ${DB_PASSWORD}
-#         networks:
-#             - atomic-backend-network
+#     #         REVERB_APP_ID: 460890
+#     #         REVERB_APP_KEY: o3het0elk13bgxqsaw3d
+#     #         REVERB_APP_SECRET: 5dp2bwzs2mtrd7pq1w2j
+#     #         REVERB_HOST: "localhost"
+#     #         REVERB_PORT: 8080
+#     #         REVERB_SCHEME: http
+
+#     #         VITE_REVERB_APP_KEY: "${REVERB_APP_KEY}"
+#     #         VITE_REVERB_HOST: "${REVERB_HOST}"
+#     #         VITE_REVERB_PORT: "${REVERB_PORT}"
+#     #         VITE_REVERB_SCHEME: "${REVERB_SCHEME}"
+
+#     #     networks:
+#     #         - atomic-backend-network
+
+#     # queue-listen:
+#     #     build:
+#     #         context: ./
+#     #         dockerfile: Dockerfile
+#     #     container_name: atomic-backend-queue-listen
+#     #     restart: unless-stopped
+#     #     working_dir: /var/www/
+#     #     command: php artisan queue:listen
+#     #     depends_on:
+#     #         - db
+#     #         - atomic-backend-app
+#     #     volumes:
+#     #         - ./:/var/www
+#     #     environment:
+#     #         DB_CONNECTION: ${DB_CONNECTION}
+#     #         DB_HOST: atomic-backend-db-container
+#     #         DB_PORT: ${DB_PORT}
+#     #         DB_DATABASE: ${DB_DATABASE}
+#     #         DB_USERNAME: ${DB_USERNAME}
+#     #         DB_PASSWORD: ${DB_PASSWORD}
+#     #     networks:
+#     #         - atomic-backend-network
 
 # networks:
 #     atomic-backend-network:
@@ -152,7 +167,7 @@ services:
             - atomic-backend-network
         depends_on:
             db:
-                condition: service_healthy # Wait for the MySQL container to be healthy
+                condition: service_healthy
         environment:
             DB_CONNECTION: ${DB_CONNECTION}
             DB_HOST: atomic-backend-db-container
@@ -220,67 +235,6 @@ services:
             DB_PASSWORD: ${DB_PASSWORD}
         networks:
             - atomic-backend-network
-
-    # reverb:
-    #     build:
-    #         context: ./
-    #         dockerfile: Dockerfile
-    #     container_name: atomic-backend-reverb
-    #     restart: unless-stopped
-    #     working_dir: /var/www/
-    #     command: php artisan reverb:start --debug
-    #     depends_on:
-    #         - db
-    #         - atomic-backend-app
-    #     volumes:
-    #         - ./:/var/www
-    #     ports:
-    #         - "8081:8080" # Expose WebSocket port
-    #     environment:
-    #         DB_CONNECTION: ${DB_CONNECTION}
-    #         DB_HOST: atomic-backend-db-container
-    #         DB_PORT: ${DB_PORT}
-    #         DB_DATABASE: ${DB_DATABASE}
-    #         DB_USERNAME: ${DB_USERNAME}
-    #         DB_PASSWORD: ${DB_PASSWORD}
-
-    #         REVERB_APP_ID: 460890
-    #         REVERB_APP_KEY: o3het0elk13bgxqsaw3d
-    #         REVERB_APP_SECRET: 5dp2bwzs2mtrd7pq1w2j
-    #         REVERB_HOST: "localhost"
-    #         REVERB_PORT: 8080
-    #         REVERB_SCHEME: http
-
-    #         VITE_REVERB_APP_KEY: "${REVERB_APP_KEY}"
-    #         VITE_REVERB_HOST: "${REVERB_HOST}"
-    #         VITE_REVERB_PORT: "${REVERB_PORT}"
-    #         VITE_REVERB_SCHEME: "${REVERB_SCHEME}"
-
-    #     networks:
-    #         - atomic-backend-network
-
-    # queue-listen:
-    #     build:
-    #         context: ./
-    #         dockerfile: Dockerfile
-    #     container_name: atomic-backend-queue-listen
-    #     restart: unless-stopped
-    #     working_dir: /var/www/
-    #     command: php artisan queue:listen
-    #     depends_on:
-    #         - db
-    #         - atomic-backend-app
-    #     volumes:
-    #         - ./:/var/www
-    #     environment:
-    #         DB_CONNECTION: ${DB_CONNECTION}
-    #         DB_HOST: atomic-backend-db-container
-    #         DB_PORT: ${DB_PORT}
-    #         DB_DATABASE: ${DB_DATABASE}
-    #         DB_USERNAME: ${DB_USERNAME}
-    #         DB_PASSWORD: ${DB_PASSWORD}
-    #     networks:
-    #         - atomic-backend-network
 
 networks:
     atomic-backend-network:
