--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=ATOMIC
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Africa/Nairobi
 APP_URL=http://localhost
 
 APP_LOCALE=en
