--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-query-builder": "^6.0"
     },
     "require-dev": {
