--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "opcodesio/log-viewer": "^3.11",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-query-builder": "^6.0"
     },
     "require-dev": {
