--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,55 @@
 services:
-    atomic-backend-app:
+    atomik:
         build:
-            context: ./
+            context: ./vendor/laravel/sail/runtimes/8.4
             dockerfile: Dockerfile
-        image: atomic-backend-image
-        container_name: atomic-backend-container
-        restart: unless-stopped
-        working_dir: /var/www
+            args:
+                WWWGROUP: "${WWWGROUP}"
+        image: sail-8.4/app
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
+        ports:
+            - "${APP_PORT:-80}:80"
+            - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
+        environment:
+            WWWUSER: "${WWWUSER}"
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: "${SAIL_XDEBUG_MODE:-off}"
+            XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
+            IGNITION_LOCAL_SITES_PATH: "${PWD}"
         volumes:
-            - ./:/var/www
+            - ".:/var/www/html"
         networks:
-            - atomic-backend-network
+            - sail
         depends_on:
-            db:
-                condition: service_healthy
-        environment:
-            DB_CONNECTION: ${DB_CONNECTION}
-            DB_HOST: atomic-backend-db-container
-            DB_PORT: ${DB_PORT}
-            DB_DATABASE: ${DB_DATABASE}
-            DB_USERNAME: ${DB_USERNAME}
-            DB_PASSWORD: ${DB_PASSWORD}
-            TZ: ${APP_TIMEZONE}
-
-    db:
-        image: mysql:8.0
-        container_name: atomic-backend-db-container
-        restart: unless-stopped
+            - mysql
+    mysql:
+        image: "mysql/mysql-server:8.0"
         ports:
-            - 3306:3306
+            - "${FORWARD_DB_PORT:-3306}:3306"
         environment:
-            MYSQL_ROOT_PASSWORD: atomic
-            TZ: ${APP_TIMEZONE}
+            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: "${DB_DATABASE}"
+            MYSQL_USER: "${DB_USERNAME}"
+            MYSQL_PASSWORD: "${DB_PASSWORD}"
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - db-data:/var/lib/mysql
-            - ./docker-compose/mysql:/docker-entrypoint-initdb.d
+            - "sail-mysql:/var/lib/mysql"
+            - "./vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
         networks:
-            - atomic-backend-network
+            - sail
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-            interval: 10s
+            test:
+                - CMD
+                - mysqladmin
+                - ping
+                - "-p${DB_PASSWORD}"
+            retries: 3
             timeout: 5s
-            retries: 5
-
-    nginx:
-        image: nginx:alpine
-        container_name: atomic-backend-nginx-container
-        restart: unless-stopped
-        ports:
-            - 8080:80
-        volumes:
-            - ./:/var/www
-            - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-        networks:
-            - atomic-backend-network
-
 networks:
-    atomic-backend-network:
+    sail:
         driver: bridge
-
 volumes:
-    db-data:
+    sail-mysql:
+        driver: local
